[gd_scene load_steps=11 format=3 uid="uid://c21jsew46j2v0"]

[ext_resource type="Script" path="res://scripts/character/player/player.gd" id="1_srksq"]
[ext_resource type="SpriteFrames" uid="uid://dy0ok2t6yhqyc" path="res://sprites/spritesheets/spriteframes/characters/base/char_0_base.tres" id="2_ai6r1"]
[ext_resource type="PackedScene" uid="uid://h6t3cjbjhfv7" path="res://entities/characters/character_base.tscn" id="3_f7037"]
[ext_resource type="Texture2D" uid="uid://0d3n5esom4o4" path="res://sprites/lights/small_shadow.png" id="3_qo3kv"]
[ext_resource type="Texture2D" uid="uid://drhb8omp3qpc2" path="res://sprites/die_text.png" id="6_o3xy8"]
[ext_resource type="PackedScene" uid="uid://mcdceuvq1y5j" path="res://interface/player_ui.tscn" id="6_ya2x2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3o5m8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3v7o"]
size = Vector2(20, 13)

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_32dvj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_smo0f"]

[node name="player" type="RigidBody2D" groups=["player"]]
y_sort_enabled = true
collision_mask = 8447
mass = 70.0
physics_material_override = SubResource("PhysicsMaterial_3o5m8")
gravity_scale = 0.0
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
linear_damp = 6.0
script = ExtResource("1_srksq")
base_spriteframes = ExtResource("2_ai6r1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Player"]]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_w3v7o")

[node name="grabber" type="ShapeCast2D" parent="."]
rotation = 4.71239
shape = SubResource("SeparationRayShape2D_32dvj")
target_position = Vector2(5.79359e-06, 6)
collision_mask = 12

[node name="shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, -1)
texture = ExtResource("3_qo3kv")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 64.0

[node name="character_base" parent="." instance=ExtResource("3_f7037")]
position = Vector2(0, -3)
base_spriteframes = ExtResource("2_ai6r1")
hat_spriteframes = SubResource("SpriteFrames_smo0f")
top_spriteframes = SubResource("SpriteFrames_smo0f")
bottom_spriteframes = SubResource("SpriteFrames_smo0f")

[node name="tough_luck" type="Sprite2D" parent="."]
visible = false
position = Vector2(7, -41)
texture = ExtResource("6_o3xy8")

[node name="Camera2D" type="Camera2D" parent="." groups=["Player", "camera"]]
limit_left = -1000000
position_smoothing_enabled = true
position_smoothing_speed = 8.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.0
drag_right_margin = 0.1
drag_bottom_margin = 0.0
editor_draw_drag_margin = true

[node name="ui_canvas" type="CanvasLayer" parent="."]

[node name="player_ui" parent="ui_canvas" instance=ExtResource("6_ya2x2")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
